[gd_scene load_steps=12 format=2]

[ext_resource path="res://goal.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Character.tscn" type="PackedScene" id=3]
[ext_resource path="res://tile.png" type="Texture" id=4]
[ext_resource path="res://TestLevel.gd" type="Script" id=5]
[ext_resource path="res://Goal.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=1]
0/name = "icon.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "icon.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 32, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "tile.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "icon.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 14 )

[node name="TestLevel" type="Node"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1
tile_data = PoolIntArray( -1610612735, 0, 0, -1073741823, 0, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, -65514, 2, 0, -65513, 2, 0, -65512, 2, 0, -65511, 2, 0, -65510, 2, 0, -65509, 2, 0, -65508, 2, 0, -65507, 2, 0, -65506, 2, 0, -65505, 2, 0, -65504, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 65536, 2, 0, 65545, 2, 0, 65558, 2, 0, 65567, 2, 0, 131072, 2, 0, 131075, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 131092, 2, 0, 131094, 2, 0, 131097, 2, 0, 131103, 2, 0, 196608, 2, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 2, 0, 196628, 2, 0, 196630, 2, 0, 196633, 2, 0, 196636, 2, 0, 196637, 2, 0, 196639, 2, 0, 262144, 2, 0, 262155, 2, 0, 262156, 2, 0, 262157, 2, 0, 262158, 2, 0, 262165, 2, 0, 262166, 2, 0, 262169, 2, 0, 262172, 2, 0, 262173, 2, 0, 262175, 2, 0, 327680, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 327689, 2, 0, 327690, 2, 0, 327691, 2, 0, 327694, 2, 0, 327695, 2, 0, 327696, 2, 0, 327697, 2, 0, 327698, 2, 0, 327699, 2, 0, 327700, 2, 0, 327701, 2, 0, 327705, 2, 0, 327708, 2, 0, 327711, 2, 0, 393216, 2, 0, 393241, 2, 0, 393244, 2, 0, 393247, 2, 0, 458752, 2, 0, 458753, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458763, 2, 0, 458764, 2, 0, 458765, 2, 0, 458766, 2, 0, 458769, 2, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458778, 2, 0, 458780, 2, 0, 458781, 2, 0, 458783, 2, 0, 524288, 2, 0, 524302, 2, 0, 524311, 2, 0, 524312, 2, 0, 524314, 2, 0, 524317, 2, 0, 524319, 2, 0, 589824, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 2, 0, 589832, 2, 0, 589833, 2, 0, 589834, 2, 0, 589835, 2, 0, 589836, 2, 0, 589838, 2, 0, 589842, 2, 0, 589848, 2, 0, 589850, 2, 0, 589853, 2, 0, 589855, 2, 0, 655360, 2, 0, 655372, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655378, 2, 0, 655381, 2, 0, 655384, 2, 0, 655386, 2, 0, 655389, 2, 0, 655391, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720910, 2, 0, 720914, 2, 0, 720917, 2, 0, 720920, 2, 0, 720922, 2, 0, 720925, 2, 0, 720927, 2, 0, 786432, 2, 0, 786437, 2, 0, 786440, 2, 0, 786446, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786453, 2, 0, 786456, 2, 0, 786458, 2, 0, 786461, 2, 0, 786463, 2, 0, 851968, 2, 0, 851970, 2, 0, 851976, 2, 0, 851977, 2, 0, 851979, 2, 0, 851980, 2, 0, 851981, 2, 0, 851982, 2, 0, 851987, 2, 0, 851989, 2, 0, 851992, 2, 0, 851996, 2, 0, 851997, 2, 0, 851999, 2, 0, 917504, 2, 0, 917506, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917523, 2, 0, 917525, 2, 0, 917526, 2, 0, 917528, 2, 0, 917529, 2, 0, 917532, 2, 0, 917535, 2, 0, 983040, 2, 0, 983042, 2, 0, 983050, 2, 0, 983057, 2, 0, 983059, 2, 0, 983062, 2, 0, 983065, 2, 0, 983066, 2, 0, 983067, 2, 0, 983068, 2, 0, 983069, 2, 0, 983071, 2, 0, 1048576, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 2, 0, 1048593, 2, 0, 1048595, 2, 0, 1048597, 2, 0, 1048598, 2, 0, 1048602, 2, 0, 1048607, 2, 0, 1114112, 2, 0, 1114133, 2, 0, 1114134, 2, 0, 1114143, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 2, 0, 1179659, 2, 0, 1179660, 2, 0, 1179661, 2, 0, 1179662, 2, 0, 1179663, 2, 0, 1179664, 2, 0, 1179665, 2, 0, 1179666, 2, 0, 1179667, 2, 0, 1179668, 2, 0, 1179669, 2, 0, 1179670, 2, 0, 1179671, 2, 0, 1179672, 2, 0, 1179673, 2, 0, 1179674, 2, 0, 1179675, 2, 0, 1179676, 2, 0, 1179677, 2, 0, 1179678, 2, 0, 1179679, 2, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Goal" type="Area2D" parent="."]
position = Vector2( 417, -192 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Goal"]
position = Vector2( 496, 208 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 496, 208 )
shape = SubResource( 4 )

[node name="Character" parent="." instance=ExtResource( 3 )]
position = Vector2( 276, 139 )
isAllowMovement = false

[node name="HUD" parent="." instance=ExtResource( 7 )]

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 275, 140 )

[connection signal="area_entered" from="Goal" to="." method="_on_Goal_area_entered"]
[connection signal="update_score_onMove" from="Character" to="." method="_on_Character_update_score_onMove"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
